--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exercises Targeting Major Muscles</title>
     <link rel="stylesheet" href="./css/main.css" />
-    <script src="./src/index.js"></script>
+    <script defer src="./src/index.js"></script>
   </head>
   <body>
     <nav> 
@@ -20,11 +30,8 @@
     </nav>
     <main class="container">
         <section>
-            <div id="Exercises">
+            <div id="exers">
 
-            </div>
-            <div class="details" id="details">
-    
             </div>
         </section>
         <button class="btn" id="like_btn"></button>
