--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
         <h1>Muscles Exercises</h1>
       </div>
       <div id="user_favorite">
-        <button class="begginer" id="btn_1">Begginer</button>
+        <button class="begginer" id="button1">Begginer</button>
         <button class="intermediate" id="btn_2">Intermediate</button>
         <button class="Expert" id="btn_3">Expert</button>
       </div>
