--- a/Index.html
+++ b/Index.html
@@ -1,40 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body></body>
 </html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exercises Targeting Major Muscles</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="./css/main.css" />
     <script defer src="./src/index.js"></script>
   </head>
   <body>
-    <nav> 
+    <nav>
       <div>
         <h1>Muscles Exercises</h1>
       </div>
       <div id="user_favorite">
-        <button class="begginer" id="button1">Begginer</button>
+        <button class="begginer" id="btn">Begginer</button>
         <button class="intermediate" id="btn_2">Intermediate</button>
         <button class="Expert" id="btn_3">Expert</button>
       </div>
     </nav>
     <main class="container">
-        <section>
-            <div id="exers">
-
-            </div>
-        </section>
-        <button class="btn" id="like_btn"></button>
+      <section>
+        <div id="exers"></div>
+      </section>
     </main>
   </body>
 </html>
