--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
         <h1>Muscles Exercises</h1>
       </div>
       <div id="user_favorite">
-        <button class="begginer" id="btn">Begginer</button>
+        <button class="beginner" id="btn">Beginner</button>
         <button class="intermediate" id="btn_2">Intermediate</button>
         <button class="Expert" id="btn_3">Expert</button>
       </div>
