--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script defer src="./src/index.js"></script>
+    <script defer src="./src/index2.js"></script>
   </head>
   <body>
     <nav>
