--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exercises Targeting Major Muscles</title>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <script defer src="./src/index.js"></script>
   </head>
   <body>
@@ -18,11 +22,9 @@
       </div>
     </nav>
 
-    <div class="container">
-      
-          </div>
-         <div id="details">
-
-         </div>
+    <div class="container"></div>
+    <div id="details">
+    
+    </div>
   </body>
 </html>
